Add low level service for editing player information

--- a/Services/Services.csproj
+++ b/Services/Services.csproj
@@ -4,4 +4,9 @@
     <TargetFramework>netcoreapp2.0</TargetFramework>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\DAL\DAL.csproj" />
+    <ProjectReference Include="..\ModelClasses\ModelClasses.csproj" />
+  </ItemGroup>
+
 </Project>
