--- a/Soccer_Manager/appsettings.json
+++ b/Soccer_Manager/appsettings.json
@@ -1,4 +1,7 @@
 ﻿{
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=myDataBase;User Id=Vova; Pssword=pokerworld"
+  },
   "Logging": {
     "IncludeScopes": false,
     "LogLevel": {
@@ -6,3 +9,4 @@
     }
   }
 }
+
