--- a/WebApplication1/appsettings.json
+++ b/WebApplication1/appsettings.json
@@ -1,6 +1,8 @@
 ﻿{
   "ConnectionStrings": {
-    "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=soccerstoredb;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=soccerstoredb;Trusted_Connection=True;MultipleActiveResultSets=true",
+    "AuthConnection": "Server=(localdb)\\mssqllocaldb;Database=usersstoredb;Trusted_Connection=True;MultipleActiveResultSets=true"
+
   },
   "Logging": {
     "IncludeScopes": false,
