--- a/WebApplication1/appsettings.json
+++ b/WebApplication1/appsettings.json
@@ -9,5 +9,11 @@
     "LogLevel": {
       "Default": "Warning"
     }
+  },
+  "Email": {
+    "Email": "mail",
+    "Password": "password",
+    "Host": "smtp.gmail.com",
+    "Port": "587"
   }
 }
